# miniexact

./: .gitignore  CMakeLists.txt  CheckGit.cmake  LICENSE.md  README.md  algorithm.c  algorithm.cpp  algorithm.h  algorithm.hpp  algorithm_c.c  algorithm_knuth_cnf.c  algorithm_x.c  algorithm_x.h  dancing-links.cpp  delta-debug-problem.cpp  delta-debug-problem.hpp  emscripten.cpp  log.c  main.c  main.cpp  nodes.hpp  ops.h  parse.c  parse.h  parser.cpp  parser.hpp  problem.cpp  problem.hpp  test.cpp  util.cpp  util.hpp  wordpuzzle.cpp  wordpuzzle.hpp  xcc.c  xcc.h  xcc.hpp  xcc_lexer.h  xcc_lexer.l  xcc_parser.y
.github/workflows/: page.yml
examples/: dimacs-1.xc  dimacs-2.xc  knuth_ex_6.xcc  python.py  sudoku.py
examples/ex274/: README.md  ex270.txt  ex274_ell.txt  ex274_skew.txt  ex274_square.txt  ex274_straight.txt  ex274_tee.txt
examples/soma-pieces/: test-cube.ccxc
include/miniexact/: algorithm.h  algorithm_c.h  algorithm_c_dollar.h  algorithm_knuth_cnf.h  algorithm_m.h  algorithm_x.h  git.h  log.h  miniexact.h  miniexact.hpp  ops.h  parse.h  sat_solver.h  siftup.h  simple.h  simple.hpp  util.h
include/xcc/: algorithm.h  algorithm_c.h  algorithm_knuth_cnf.h  algorithm_m.h  algorithm_x.h  git.h  log.h  ops.h  parse.h  sat_solver.h  simple.h  simple.hpp  util.h  xcc.h  xcc.hpp  xcc_lexer.h
python/: build-pyxcc.py
src/: CMakeLists.txt  algorithm.c  algorithm_c.c  algorithm_c_dollar.c  algorithm_knuth_cnf.c  algorithm_m.c  algorithm_x.c  git.c.in  log.c  main.c  main_web.c  main_web.cpp  miniexact.c  parse.c  sat_solver.c  simple.c  util.c  xcc.c
swig/: pyminiexact.i  pyxcc.i
test/: CMakeLists.txt  test_parse.cpp  test_sat_solver.cpp  test_siftup.cpp  test_solve.cpp  test_util.cpp
test/soma-pieces/: README.md  penthouse.ccxc  pyramid.ccxc  staircase.ccxc
web/: about.html  index.html  main.js
xcc/: CMakeLists.txt  algorithm.c  algorithm.h  algorithm_x.c  algorithm_x.h  main.c  ops.h  parse.c  parse.h  xcc.c  xcc.h  xcc.hpp  xcc_lexer.h  xcc_lexer.l  xcc_parser.y
xcc/test/: test_parse.cpp
